# VPFM-BioRob-EPFL

./: .gitignore  README.md
src/assistive_furniture_interfaces/: CMakeLists.txt  package.xml
src/assistive_furniture_interfaces/msg/: FurnitureList.msg
src/furniture_descriptions/meshes/table/: square_table.stl
src/furniture_descriptions/urdf/: table.xacro
src/furniture_tracker/: package.xml  setup.cfg  setup.py
src/furniture_tracker/config/: calibration_data_file.yaml
src/furniture_tracker/furniture_tracker/: furniture_tracker.py
src/omnibot_parser/: package.xml  setup.cfg  setup.py
src/omnibot_parser/omnibot_parser/: automatic_parser.py  safety_stop.py
