<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>furniture_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="david.ruegg@epfl.ch">druegg</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>mocap4r2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>assistive_furniture_interfaces</depend>

  <depend>python3-yaml</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
